--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "element-starter",
-  "description": "A Vue.js project",
-  "author": "yi.shyang@ele.me",
+  "name": "MeebidUI",
+  "description": "Meebid UI project",
+  "author": "Kevin Wang",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --env.dev",
