--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "element-ui": "^2.0.10",
     "jquery": "^3.2.1",
+    "quill": "^1.3.5",
     "vue": "^2.5.13",
     "vue-i18n": "^7.4.0"
   },
